# bill_engine

./: .coverage  .env.example  .gitignore  LICENSE.txt  README.md  main.py  manage.py  pyproject.toml
bill_engine/: asgi.py  urls.py  wsgi.py
bill_engine/settings/: __init__.py  base.py  local.py
billing/: adapters.py  chart_data.py  exceptions.py  forms.py  services.py
billing/core/: applicability.py  calculator.py  data.py  types.py  util.py
billing/tests/: conftest.py  test_adapters.py  test_applicability.py  test_calculator.py  test_data.py
customers/: admin.py  csv_service.py  forms.py  models.py  tests.py  usage_analytics.py  usage_chart_data.py
customers/migrations/: 0001_initial.py  0002_remove_timezone_default.py  0003_customer_billing_interval_minutes.py  0004_add_billing_day.py
customers/tests/: test_admin.py  test_csv_service.py  test_customer.py  test_usage_analytics.py  test_usage_chart_data.py
docs/: bulk_tariff_edits.md
docs/design/: billing.md  design_brief.md  models.md  user_stories.md
docs/dev/: todo.md
tariffs/: admin.py  forms.py  models.py  test_customer_charge.py  test_demand_charge.py  test_energy_charge.py  test_tariff.py  yaml_service.py
tariffs/migrations/: 0001_initial.py  0002_alter_demandcharge_period_end_time_local_and_more.py  0003_alter_customercharge_usd_per_month_and_more.py  0004_add_customer_charge_type.py  0005_alter_customercharge_amount_usd.py  0006_add_applicability_rule_model.py  (+2 more)
usage/: admin.py  csv_service.py  forms.py  models.py  tests.py
utilities/: admin.py  models.py  tests.py
(+53 files in other folders)
